# py-vault

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  TODO.md  USAGE.md  install.ps1  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: release.yml
src/pyvault/: crypto.py  main.py  protections.py  storage.py
tests/: test_add_command.py  test_audit_command.py  test_complete_flow.py  test_crypto.py  test_get_command.py  test_rm_command.py  test_storage.py  test_wipe_command.py
